--- a/css/main.css
+++ b/css/main.css
@@ -15,3 +15,12 @@ html {
 *, *::before, *::after {
   box-sizing: inherit;
 }
+
+img {
+  width: 100%;
+}
+
+img:nth-child(2),
+img:nth-child(5) {
+  display: none;
+}
