--- a/css/main.css
+++ b/css/main.css
@@ -16,11 +16,61 @@ html {
   box-sizing: inherit;
 }
 
+body {
+  margin: 0;
+  padding: 0;
+}
+
 img {
   width: 100%;
+  display: block;
 }
 
 img:nth-child(2),
 img:nth-child(5) {
   display: none;
+}
+
+@media only screen and (min-width: 25em) {
+
+  img {
+    float: left;
+  }
+
+  img:nth-child(2),
+  img:nth-child(5) {
+    display: block;
+  }
+
+  img:nth-child(2),
+  img:nth-child(3),
+  img:nth-child(4),
+  img:nth-child(5) {
+    width: 50%;
+  }
+}
+
+@media only screen and (min-width: 38em) {
+
+  img:nth-child(2),
+  img:nth-child(3),
+  img:nth-child(4) {
+    width: 33.3333%;
+  }
+
+  img:nth-child(5) {
+    display: none;
+  }
+}
+
+@media only screen and (min-width: 60em) {
+
+  img:first-child {
+    width: 66.6666%;
+  }
+
+  img:nth-child(5) {
+    display: block;
+    width: 33.3333%;
+  }
 }
